Update navbar logo text across multiple pages to include '@ UCF'

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html">WEN Lab</a>
+                <a href="index.html">WEN Lab @ UCF</a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item">
