--- a/about.html
+++ b/about.html
@@ -75,12 +75,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>WEN Lab</h3>
-                    <p>Wearable Engineering and Neural Interface Laboratory<br>University of Central Florida</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Contact</h3>
-                    <p>Email: jiruifu@gmail.com<br>Address: 12201 Research Pkwy, Orlando, FL 32816</p>
+                    <h3>Lab Address</h3>
+                    <p>Wearable Engineering and Neural Interface Laboratory<br>University of Central Florida<br>12201 Research Pkwy<br>Suite 150A<br>Orlando, FL 32816</p>
                 </div>
                 <div class="footer-section">
                     <h3>Follow Us</h3>
@@ -88,6 +84,9 @@
                         <a href="https://github.com/wenlab-2023" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="mailto:jiruifu@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
+                </div>
+                <div class="footer-section footer-logo">
+                    <img src="assets/media/logo-foot.png" alt="WEN Lab Logo" class="footer-logo-img">
                 </div>
             </div>
             <div class="footer-bottom">
