Update footer sections in multiple HTML files to wrap the lab logo in a link to the UCF MAE website for improved accessibility and branding.

--- a/event-template.html
+++ b/event-template.html
@@ -88,7 +88,9 @@
                     </div>
                 </div>
                 <div class="footer-section footer-logo">
-                    <img src="assets/media/logo-foot.png" alt="WEN Lab Logo" class="footer-logo-img">
+                    <a href="https://mae.ucf.edu" target="_blank">
+                        <img src="assets/media/logo-foot.png" alt="WEN Lab Logo" class="footer-logo-img">
+                    </a>
                 </div>
             </div>
             <div class="footer-bottom">
