Enhance slideshow functionality by initializing auto-advance after content load and adjusting interval timing to 3000ms. Clear existing intervals to prevent multiple timers when reinitializing slides.

--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
                 // Store the total number of slides globally
                 window.totalSlides = slideshowData.length;
                 
+                // Initialize slideshow auto-advance after content is loaded
+                if (typeof initSlideshow === 'function') {
+                    initSlideshow();
+                }
+                
             } catch (error) {
                 console.error('Error loading slideshow:', error);
             }
