Update styles and HTML structure for footer sections across multiple files to implement dropdown menus for UCF affiliations, enhancing accessibility and user experience. Adjust CSS for improved hover effects and dropdown visibility.

--- a/interested-students.html
+++ b/interested-students.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>For Interested Students - WEN Lab</title>
     <link rel="icon" type="image/png" href="assets/media/icon.png">
-    <link rel="stylesheet" href="styles.css?v=1753814932">
+    <link rel="stylesheet" href="styles.css?v=1753816100">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
@@ -187,13 +187,14 @@
                         <a href="mailto:jiruifu@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
-                                <div class="footer-section footer-logo">
-                    <a href="https://mae.ucf.edu" target="_blank">
+                                                <div class="footer-section footer-logo">
+                    <div class="footer-logo-dropdown">
                         <img src="assets/media/logo-foot.png" alt="WEN Lab Logo" class="footer-logo-img">
-                    </a>
-                    <a href="https://www.ucf.edu/research/disability-aging-technology/" target="_blank">
-                        <img src="assets/media/logo_dat.jpg" alt="DAT Research Cluster Logo" class="footer-logo-img">
-                    </a>
+                        <div class="footer-logo-dropdown-content">
+                            <a href="https://mae.ucf.edu" target="_blank">UCF Mechanical & Aerospace Engineering</a>
+                            <a href="https://www.ucf.edu/research/disability-aging-technology/" target="_blank">UCF Disability, Aging & Technology (DAT)</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
