--- a/project-template.html
+++ b/project-template.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Detail - WEN Lab</title>
     <link rel="icon" type="image/png" href="assets/media/icon.png">
-    <link rel="stylesheet" href="styles.css?v=1753814932">
+    <link rel="stylesheet" href="styles.css?v=1753816100">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -137,13 +137,14 @@
                         <a href="mailto:jiruifu@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
-                <div class="footer-section footer-logo">
-                    <a href="https://mae.ucf.edu" target="_blank">
+                                <div class="footer-section footer-logo">
+                    <div class="footer-logo-dropdown">
                         <img src="assets/media/logo-foot.png" alt="WEN Lab Logo" class="footer-logo-img">
-                    </a>
-                    <a href="https://www.ucf.edu/research/disability-aging-technology/" target="_blank">
-                        <img src="assets/media/logo_dat.jpg" alt="DAT Research Cluster Logo" class="footer-logo-img">
-                    </a>
+                        <div class="footer-logo-dropdown-content">
+                            <a href="https://mae.ucf.edu" target="_blank">UCF Mechanical & Aerospace Engineering</a>
+                            <a href="https://www.ucf.edu/research/disability-aging-technology/" target="_blank">UCF Disability, Aging & Technology (DAT)</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -153,8 +154,8 @@
     </footer>
 
     <script src="markdown-parser.js?v=1"></script>
-    <script src="content-loader.js"></script>
-    <script src="script.js"></script>
+    <script src="content-loader.js?v=1"></script>
+    <script src="script.js?v=1"></script>
     <script>
         // Get project ID from URL parameter
         const urlParams = new URLSearchParams(window.location.search);
@@ -169,7 +170,7 @@
             }
             
             try {
-                const response = await fetch(`content/projects/${projectId}.md`);
+                const response = await fetch(`content/projects/${projectId}.md?v=${Date.now()}`);
                 if (!response.ok) {
                     throw new Error('Project not found');
                 }
