--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - WEN Lab</title>
     <link rel="icon" type="image/png" href="assets/media/icon.png">
-    <link rel="stylesheet" href="styles.css?v=1753814932">
+    <link rel="stylesheet" href="styles.css?v=1753816100">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         .dropdown {
@@ -121,13 +121,14 @@
                         <a href="mailto:jiruifu@gmail.com"><i class="fas fa-envelope"></i></a>
                     </div>
                 </div>
-                                <div class="footer-section footer-logo">
-                    <a href="https://mae.ucf.edu" target="_blank">
+                                                <div class="footer-section footer-logo">
+                    <div class="footer-logo-dropdown">
                         <img src="assets/media/logo-foot.png" alt="WEN Lab Logo" class="footer-logo-img">
-                    </a>
-                    <a href="https://www.ucf.edu/research/disability-aging-technology/" target="_blank">
-                        <img src="assets/media/logo_dat.jpg" alt="DAT Research Cluster Logo" class="footer-logo-img">
-                    </a>
+                        <div class="footer-logo-dropdown-content">
+                            <a href="https://mae.ucf.edu" target="_blank">UCF Mechanical & Aerospace Engineering</a>
+                            <a href="https://www.ucf.edu/research/disability-aging-technology/" target="_blank">UCF Disability, Aging & Technology (DAT)</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -136,9 +137,9 @@
         </div>
     </footer>
 
-    <script src="markdown-parser.js"></script>
-    <script src="content-loader.js"></script>
-    <script src="script.js"></script>
+    <script src="markdown-parser.js?v=1"></script>
+    <script src="content-loader.js?v=1"></script>
+    <script src="script.js?v=1"></script>
     <script>
                         // Helper functions for icons
         function getCategoryIcon(category) {
